--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<article>
+		<p>First paragraph</p>
+		<p>Set all list items' background color to gray, with every odd item having a white background.</p>
+		<p>Shades of gray consist of both achromatic grayscale shades, which are varying combinations of black and white, and close colors that have very low saturation.</p>
+		<p>Achromatic grays include shades like gainsboro and silver, with no saturation at all, while grayish colors include taupe, ash, and cadet gray.</p>
+	</article>
+	<section>
+		<ul>
+			<li>First Item</li>
+			<li>Second Item</li>
+			<li>Third Item</li>
+			<li>Fourth Item</li>
+			<li>Fifth Item</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
